Plugins system improvements